--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="to_second">To Second!</string>
-    <string name="to_first">To First</string>
+    <string name="to_first">To First!</string>
     <string name="to_third">To Third!</string>
+    <string name="activity_about">About</string>
+    <string name="come_back">Return!</string>
 </resources>
